--- a/vehicle.html
+++ b/vehicle.html
@@ -13,12 +13,9 @@
 <body>
   <main>
     <h1 id="name"></h1>
-    <section id="generalInfo">
-      <p>Vehicle Class: <span id="vehicle-class"></span></p>
-    </section>
-    <section id="planets">
-      <h2>Drivers</h2>
-      <p><span id="drivers"></span></p>
+    <section id="drivers">
+        <h2>Drivers</h2>
+        <ul></ul>
     </section>
   </main>
 </body>
