--- a/film.html
+++ b/film.html
@@ -11,10 +11,9 @@
 
   <body>
     <main>
-      <h1 id="name"></h1>
+      <h1 id="title"></h1>
       <section id="generalInfo">
-        <p>Producer: <span id="producer"></span> cm</p>
-        <p>Title: <span id="title"></span> kg</p>
+        <p>Producer: <span id="producer"></span></p>
         <p>Episode: <span id="episode"></span></p>
         <p>Director: <span id="director"></span></p>
         <p>Release Date: <span id="release_date"></span></p>
