--- a/film.html
+++ b/film.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="character.js" defer></script>
+    <script src="film.js" defer></script>
     <link rel="stylesheet" href="site.css" />
     <title>A Star Wars Film</title>
   </head>
