--- a/character.html
+++ b/character.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="character.js" defer></script>
-  <link rel="stylesheet" href="site.css" />
+  <link rel="stylesheet" href="./css/site.css" />
   <title>A Star Wars Character</title>
 </head>
 
