--- a/film.html
+++ b/film.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="film.js" defer></script>
-    <link rel="stylesheet" href="site.css" />
+    <link rel="stylesheet" href="./css/auxiliary.css" />
     <title>A Star Wars Film</title>
   </head>
 
