--- a/vehicle.html
+++ b/vehicle.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="vehicle.js" defer></script>
-  <link rel="stylesheet" href="site.css" />
+  <link rel="stylesheet" href="./css/auxiliary.css" />
   <title>A Star Wars Vehicle</title>
 </head>
 
