Added placeholder text to search bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- New Tagline -->
     <p id="starting-page-description">Explore the Galaxy, One Character at a Time!</p>
     
-    <input id="searchString" oninput="filterCharacters()" autocomplete="off" />
+    <input id="searchString" oninput="filterCharacters()" autocomplete="off" placeholder="Luke Skywalker..."/>
   </div>
   
   <section id="charactersList">
